--- a/mmb_repo/templates/index.html
+++ b/mmb_repo/templates/index.html
@@ -29,6 +29,7 @@
 			<h2>
                 <strong>Coming Soon</strong> <br/>Click below for
                 <br>
+                <br>
                 <span><a href="https://docs.google.com/forms/d/1YI3kcqW26FoPy0qLZbKApNCX5tSjFV_09b040Rp--fY/viewform" class="myButton" target="_blank">
                     The Musical Connection</a>
                 </span>
@@ -36,14 +37,17 @@
                 <br/>
             </h2>
 		</div>
-		<ul class="social">
-			<li><a href="https://www.facebook.com/makemyband.in/" target="_blank" class="fb">Facebook</a></li>
-			<li><a href="#" class="tw">Twitter</a></li>
-			<li><a href="#" class="google">Google+</a></li>
-			<li><a href="#" class="insta">Instagram</a></li>
-			<li><a href="#" class="skype">Skype</a></li>
-			<li><a href="#" class="vimeo">Vimeo</a></li>
-		</ul>
+
+        <div class="socialFooter">
+            <ul class="social">
+                <li><a href="https://www.facebook.com/makemyband.in/" target="_blank" class="fb">Facebook</a></li>
+                <li><a href="#" class="tw">Twitter</a></li>
+                <li><a href="#" class="google">Google+</a></li>
+                <li><a href="#" class="insta">Instagram</a></li>
+                <li><a href="#" class="skype">Skype</a></li>
+                <li><a href="#" class="vimeo">Vimeo</a></li>
+            </ul>
+        </div>
 	</div>
 </div>
 </body>
