--- a/mmb_repo/static/css/project.css
+++ b/mmb_repo/static/css/project.css
@@ -40,3 +40,16 @@
 .right {
     float: right
 }​
+
+#ajax-content > section {
+  width: 100%;
+  height: 100%;
+}
+
+#ajax-content {
+    position: absolute;
+    width: 85%;
+    z-index: 100000;
+    height: 100%;
+}
+
