--- a/mmb_repo/templates/users/profile.html
+++ b/mmb_repo/templates/users/profile.html
@@ -1,4 +1,3 @@
-{% extends "base.html" %}
 {% load i18n %}
 {% load account %}
 {% load url from future %}
@@ -6,162 +5,161 @@
 {% load crispy_forms_tags %}
 {% load check_follow %}
 
-{% block content %}
-    <section id="content">
-      <section class="vbox">
-        <section class="scrollable">
-          <section class="hbox stretch">
-            <aside class="aside-lg bg-light lter b-r">
-              <section class="vbox">
-                <section class="scrollable">
-                  <div class="wrapper">
-                    <div class="text-center m-b m-t">
-                      <a href="#" class="thumb-lg">
-                        <img src="{{ STATIC_URL }}images/profile/{{ user.pk }}" class="img-circle">
-                      </a>
-                      <div>
-                        <div class="h3 m-t-xs m-b-xs">{{ user.first_name }} {{ user.last_name }}</div>
-                        <small class="text-muted"><i class="fa fa-map-marker"></i> {{ details.current_city }}</small>
-                      </div>
-                    </div>
-                    <div class="panel wrapper">
-                      <div class="row text-center">
-                        <div class="col-xs-6">
-                          <a href="#">
-                            <span class="m-b-xs h4 block" id="followed_by_count">{{ details.followed_by_count }}</span>
-                            <small class="text-muted">Followers</small>
-                          </a>
-                        </div>
-                        <div class="col-xs-6">
-                          <a href="#">
-                            <span class="m-b-xs h4 block" id="following_count">{{ details.following_count }}</span>
-                            <small class="text-muted">Following</small>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="btn-group btn-group-justified m-b">
-                      <a class="btn btn-success btn-rounded" id = {{user.pk}} >
-                          <i class="fa fa-eye"></i>
-                        <b class="text follow">
-                           Follow
-                        </b>
-                        <!--<span class="text-active unfollow">-->
-                          <!--<i class="fa fa-eye"></i>-->
-                        <!--</span>-->
-                      </a>
-                      <a class="btn btn-dark btn-rounded">
-                        <i class="fa fa-comment-o"></i> Available
+<section id="content" style="height: 100%;">
+  <section class="vbox">
+    <section class="scrollable">
+      <section class="hbox stretch">
+        <aside class="aside-lg bg-light lter b-r">
+          <section class="vbox">
+            <section class="scrollable">
+              <div class="wrapper">
+                <div class="text-center m-b m-t">
+                  <a href="#" class="thumb-lg">
+                    <img src="{{ STATIC_URL }}images/profile/{{ user.pk }}" class="img-circle">
+                  </a>
+                  <div>
+                    <div class="h3 m-t-xs m-b-xs">{{ user.first_name }} {{ user.last_name }}</div>
+                    <small class="text-muted"><i class="fa fa-map-marker"></i> {{ details.current_city }}</small>
+                  </div>
+                </div>
+                <div class="panel wrapper">
+                  <div class="row text-center">
+                    <div class="col-xs-6">
+                      <a href="#">
+                        <span class="m-b-xs h4 block" id="followed_by_count">{{ details.followed_by_count }}</span>
+                        <small class="text-muted">Followers</small>
                       </a>
                     </div>
-                      <input id='check_follow' type="hidden" name="check_follow"
-                                       value={% check_follow active_user user  %}>
-
-                      <a class="btn btn-info btn-rounded mybutton" style="margin-left:90px;" id={{user.pk}}>
-                          <b class="unfollow">Unfollow
-                          </b>
+                    <div class="col-xs-6">
+                      <a href="#">
+                        <span class="m-b-xs h4 block" id="following_count">{{ details.following_count }}</span>
+                        <small class="text-muted">Following</small>
                       </a>
-                    <div>
-                      <small class="text-uc text-xs text-muted">about me</small>
-                      <p>{{ details.about_me }}</p>
-                      <small class="text-uc text-xs text-muted">info</small>
-                      <p>A developer... developing makemyband using django. Like gymming, coding. Used to play football and counter strike. learning TT and snooker.</p>
-                      <div class="line"></div>
-                      <small class="text-uc text-xs text-muted">connect to me : {{ details.phone }}</small>
-                      <p class="m-t-sm">
-                        <a href="#" class="btn btn-rounded btn-twitter btn-icon"><i class="fa fa-twitter"></i></a>
-                        <a href="#" class="btn btn-rounded btn-facebook btn-icon"><i class="fa fa-facebook"></i></a>
-                        <a href="#" class="btn btn-rounded btn-gplus btn-icon"><i class="fa fa-google-plus"></i></a>
-                      </p>
                     </div>
                   </div>
-                </section>
-              </section>
-            </aside>
-            <aside>
-              <section class="vbox">
-{#                <header class="header bg-light lt">#}
-                  <ul class="nav nav-tabs">
-                    <li class={{ my_audio }}><a href="{% url 'users:view_profile' user.username %}">My Audios</a></li>
-                    <li class=""><a href="/users/profile/{{ user.username }}/" >Messages</a></li>
-                    <li class={{ upload_audio }}><a href="{% url 'users:upload_song' user.username %}">Upload Audio</a></li>
-                  </ul>
-                  {% if upload_song == "active" %}
-                   <div class="col-md-8">
-                        <form action="." method="post" enctype="multipart/form-data">
-                            {% csrf_token %}
-                            {% crispy form %}
-                            <div id='form-errors'>{{ form_errors }}</div>
-                        </form>
-                   </div>
-                  {% endif %}
+                </div>
+                <div class="btn-group btn-group-justified m-b">
+                  <a class="btn btn-success btn-rounded" id = {{user.pk}} >
+                      <i class="fa fa-eye"></i>
+                    <b class="text follow">
+                       Follow
+                    </b>
+                    <!--<span class="text-active unfollow">-->
+                      <!--<i class="fa fa-eye"></i>-->
+                    <!--</span>-->
+                  </a>
+                  <a class="btn btn-dark btn-rounded">
+                    <i class="fa fa-comment-o"></i> Available
+                  </a>
+                </div>
+                  <input id='check_follow' type="hidden" name="check_follow"
+                                   value={% check_follow active_user user  %}>
 
-                  {% if my_audio == 'active' %}
-    {#                <section class="vbox animated fadeInUp">#}
-                      <section class="scrollable" style="margin-top: 50px;">
-                        <ul class="list-group list-group-lg no-radius no-border no-bg m-t-n-xxs m-b-none auto">
-                            {% for song in playlist %}
-                                  <li class="list-group-item">
-                                    <div class="pull-right m-l">
-                                      <a href="#" class="m-r-sm"><i class="icon-cloud-download"></i></a>
-                                      <a href="#">
-                                        <i class="fa fa-plus-circle text" data-mp3="{{ song.upload.url }}" name="{{ song.name }}"></i>
-                                      </a>
-                                    </div>
-                                    <a href="#" id="audio_{{ song.pk }}" class="jp-play-me m-r-sm pull-left" data-mp3="{{ song.upload.url }}" name="{{ song.name }}">
-                                      <i class="icon-control-play text"></i>
-                                      <i class="icon-control-pause text-active"></i>
-                                    </a>
-                                    <div class="clear text-ellipsis">
-                                      <span>{{ song.name }}</span>
-                                      <span class="text-muted"> -- 04:15</span>
-                                    </div>
-                                  </li>
-                            {% endfor %}
-                        </ul>
-                      </section>
-                  {% endif %}
-
-              </section>
-            </aside>
-            <aside class="col-lg-3 b-l">
-              <section class="vbox">
-                <section class="scrollable padder-v">
-                  <div class="panel">
-                    <h4 class="font-thin padder">Latest Tweets</h4>
-                    <ul class="list-group">
-                      <li class="list-group-item">
-                          <p>Wellcome <a href="#" class="text-info">@Drew Wllon</a> and play this web application template, have fun1 </p>
-                          <small class="block text-muted"><i class="fa fa-clock-o"></i> 2 minuts ago</small>
-                      </li>
-                      <li class="list-group-item">
-                          <p>Morbi nec <a href="#" class="text-info">@Jonathan George</a> nunc condimentum ipsum dolor sit amet, consectetur</p>
-                          <small class="block text-muted"><i class="fa fa-clock-o"></i> 1 hour ago</small>
-                      </li>
-                      <li class="list-group-item">
-                          <p><a href="#" class="text-info">@Josh Long</a> Vestibulum ullamcorper sodales nisi nec adipiscing elit. Morbi id neque quam. Aliquam sollicitudin venenatis</p>
-                          <small class="block text-muted"><i class="fa fa-clock-o"></i> 2 hours ago</small>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="panel clearfix">
-                    <div class="panel-body">
-                      <a href="#" class="thumb pull-left m-r">
-                        <img src="/static/images/a0.png" class="img-circle">
-                      </a>
-                      <div class="clear">
-                        <a href="#" class="text-info">@Mike Mcalidek <i class="fa fa-twitter"></i></a>
-                        <small class="block text-muted">2,415 followers / 225 tweets</small>
-                        <a href="#" class="btn btn-xs btn-success m-t-xs">Follow</a>
-                      </div>
-                    </div>
-                  </div>
-                </section>
-              </section>
-            </aside>
+                  <a class="btn btn-info btn-rounded mybutton" style="margin-left:90px;" id={{user.pk}}>
+                      <b class="unfollow">Unfollow
+                      </b>
+                  </a>
+                <div>
+                  <small class="text-uc text-xs text-muted">about me</small>
+                  <p>{{ details.about_me }}</p>
+                  <small class="text-uc text-xs text-muted">info</small>
+                  <p>A developer... developing makemyband using django. Like gymming, coding. Used to play football and counter strike. learning TT and snooker.</p>
+                  <div class="line"></div>
+                  <small class="text-uc text-xs text-muted">connect to me : {{ details.phone }}</small>
+                  <p class="m-t-sm">
+                    <a href="#" class="btn btn-rounded btn-twitter btn-icon"><i class="fa fa-twitter"></i></a>
+                    <a href="#" class="btn btn-rounded btn-facebook btn-icon"><i class="fa fa-facebook"></i></a>
+                    <a href="#" class="btn btn-rounded btn-gplus btn-icon"><i class="fa fa-google-plus"></i></a>
+                  </p>
+                </div>
+              </div>
+            </section>
           </section>
-        </section>
+        </aside>
+        <aside>
+          <section class="vbox">
+{#                <header class="header bg-light lt">#}
+              <ul class="nav nav-tabs">
+                <li class={{ my_audio }}><a href="{% url 'users:view_profile' user.username %}">My Audios</a></li>
+                <li class=""><a href="/users/profile/{{ user.username }}/" >Messages</a></li>
+                <li class={{ upload_audio }}><a href="{% url 'users:upload_song' user.username %}">Upload Audio</a></li>
+              </ul>
+              {% if upload_song == "active" %}
+               <div class="col-md-8">
+                    <form action="." method="post" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        {% crispy form %}
+                        <div id='form-errors'>{{ form_errors }}</div>
+                    </form>
+               </div>
+              {% endif %}
+
+              {% if my_audio == 'active' %}
+{#                <section class="vbox animated fadeInUp">#}
+                  <section class="scrollable" style="margin-top: 50px;">
+                    <ul class="list-group list-group-lg no-radius no-border no-bg m-t-n-xxs m-b-none auto">
+                        {% for song in playlist %}
+                              <li class="list-group-item">
+                                <div class="pull-right m-l">
+                                  <a href="#" class="m-r-sm"><i class="icon-cloud-download"></i></a>
+                                  <a href="#">
+                                    <i class="fa fa-plus-circle text" data-mp3="{{ song.upload.url }}" name="{{ song.name }}"></i>
+                                  </a>
+                                </div>
+                                <a href="#" id="audio_{{ song.pk }}" class="jp-play-me m-r-sm pull-left" data-mp3="{{ song.upload.url }}" name="{{ song.name }}">
+                                  <i class="icon-control-play text"></i>
+                                  <i class="icon-control-pause text-active"></i>
+                                </a>
+                                <div class="clear text-ellipsis">
+                                  <span>{{ song.name }}</span>
+                                  <span class="text-muted"> -- 04:15</span>
+                                </div>
+                              </li>
+                        {% endfor %}
+                    </ul>
+                  </section>
+              {% endif %}
+
+          </section>
+        </aside>
+        <aside class="col-lg-3 b-l">
+          <section class="vbox">
+            <section class="scrollable padder-v">
+              <div class="panel">
+                <h4 class="font-thin padder">Latest Tweets</h4>
+                <ul class="list-group">
+                  <li class="list-group-item">
+                      <p>Wellcome <a href="#" class="text-info">@Drew Wllon</a> and play this web application template, have fun1 </p>
+                      <small class="block text-muted"><i class="fa fa-clock-o"></i> 2 minuts ago</small>
+                  </li>
+                  <li class="list-group-item">
+                      <p>Morbi nec <a href="#" class="text-info">@Jonathan George</a> nunc condimentum ipsum dolor sit amet, consectetur</p>
+                      <small class="block text-muted"><i class="fa fa-clock-o"></i> 1 hour ago</small>
+                  </li>
+                  <li class="list-group-item">
+                      <p><a href="#" class="text-info">@Josh Long</a> Vestibulum ullamcorper sodales nisi nec adipiscing elit. Morbi id neque quam. Aliquam sollicitudin venenatis</p>
+                      <small class="block text-muted"><i class="fa fa-clock-o"></i> 2 hours ago</small>
+                  </li>
+                </ul>
+              </div>
+              <div class="panel clearfix">
+                <div class="panel-body">
+                  <a href="#" class="thumb pull-left m-r">
+                    <img src="/static/images/a0.png" class="img-circle">
+                  </a>
+                  <div class="clear">
+                    <a href="#" class="text-info">@Mike Mcalidek <i class="fa fa-twitter"></i></a>
+                    <small class="block text-muted">2,415 followers / 225 tweets</small>
+                    <a href="#" class="btn btn-xs btn-success m-t-xs">Follow</a>
+                  </div>
+                </div>
+              </div>
+            </section>
+          </section>
+        </aside>
       </section>
-      <a href="#" class="hide nav-off-screen-block" data-toggle="class:nav-off-screen,open" data-target="#nav,html"></a>
     </section>
-{% endblock %}
+  </section>
+  <a href="#" class="hide nav-off-screen-block" data-toggle="class:nav-off-screen,open" data-target="#nav,html"></a>
+</section>
+
