--- a/mmb_repo/templates/base.html
+++ b/mmb_repo/templates/base.html
@@ -28,6 +28,7 @@
  <script src=" {% static 'js/jquery.min.js' %}"></script>
  <script src="http://underscorejs.org/underscore-min.js"></script>
  <script src=" {% static 'js/backbone.js' %}"></script>
+ <script src=" {% static 'js/jquery.session.js' %}"></script>
     <!--[if lt IE 9]>
 {#    <script src=" {% static 'js/ie/html5shiv.js' %}"></script>#}
 {#    <script src=" {% static 'js/ie/respond.min.js' %}"></script>#}
